--- a/frameworks/qt/plugins/message/MessageInspector.ui
+++ b/frameworks/qt/plugins/message/MessageInspector.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>628</width>
-    <height>518</height>
+    <width>700</width>
+    <height>526</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,52 +19,77 @@
      <item>
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
-        <widget class="QLabel" name="targetLabel">
-         <property name="text">
-          <string>Message Target</string>
-         </property>
-        </widget>
+        <layout class="QHBoxLayout" name="horizontalLayout_3">
+         <item>
+          <widget class="QLabel" name="targetLabel">
+           <property name="text">
+            <string>Message Targets</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="targetCheckButton">
+           <property name="text">
+            <string>Check All</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="targetUncheckButton">
+           <property name="text">
+            <string>Uncheck All</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </item>
        <item>
-        <widget class="QComboBox" name="targetList"/>
+        <widget class="QListWidget" name="messageTargetList"/>
        </item>
       </layout>
      </item>
      <item>
-      <layout class="QVBoxLayout" name="verticalLayout_2">
+      <layout class="QVBoxLayout" name="verticalLayout_4">
        <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_4">
+        <layout class="QHBoxLayout" name="horizontalLayout_5">
          <item>
-          <widget class="QLabel" name="maxMsgCountLabel">
+          <widget class="QLabel" name="label">
            <property name="text">
-            <string>Maximum Number of Messages</string>
+            <string>Message Types</string>
            </property>
           </widget>
          </item>
          <item>
-          <widget class="QSpinBox" name="maxMessageCount">
-           <property name="maximum">
-            <number>100000</number>
+          <widget class="QPushButton" name="typeCheckButton">
+           <property name="text">
+            <string>Check All</string>
            </property>
-           <property name="value">
-            <number>100</number>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="typeUncheckButton">
+           <property name="text">
+            <string>Uncheck All</string>
            </property>
           </widget>
          </item>
         </layout>
        </item>
        <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_2">
-         <item>
-          <widget class="QPushButton" name="clearButton">
-           <property name="text">
-            <string>Clear Stored Messages</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
+        <widget class="QListWidget" name="messageTypeList"/>
        </item>
       </layout>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <item>
+      <widget class="QPushButton" name="clearButton">
+       <property name="text">
+        <string>Clear Stored Messages</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
